Alterando limite para 100

--- a/3386-git-github-projeto_inicial/img/JS Game.html
+++ b/3386-git-github-projeto_inicial/img/JS Game.html
@@ -4,7 +4,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>JS Game</title>
+    <title>JS Game - Ric Nishimori</title>
 <link rel="stylesheet" href="./JS Game_files/style.css"></head>
 <body>
     <script src="./JS Game_files/app.js" defer=""></script>
